tests/testcase/errors/typecheck_undefined_variable.ob
fun main() do
  let x = unknown_var;
end